Fix gmail exim4 bounces from root@domain

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -12,6 +12,7 @@ mail_user: root
 mail_email: root@localhost
 mail_pass: ""
 mail_masq_as: ""
+mail_domain: "localhost"
 
 exim_templates:
   - name: passwd client config
