Remove Ubuntu for now

--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -38,7 +38,7 @@ jobs:
           - debian10
           - debian11
           - centos7
-          - ubuntu2004
+          # - ubuntu2004
 
     steps:
       - name: Check out the codebase.
